--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,18 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "neomerx/json-api": "^2.0",
+        "overblog/graphql-bundle": "^0.11.4",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "*"
     },
     "require-dev": {
-        "symfony/dotenv": "*"
+        "overblog/graphiql-bundle": "^0.1.1",
+        "symfony/dotenv": "*",
+        "symfony/maker-bundle": "^1.6"
     },
     "config": {
         "preferred-install": {
