--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,18 @@
         "ext-iconv": "*",
         "neomerx/json-api": "^2.0",
         "overblog/graphql-bundle": "^0.11.4",
+        "prooph/event-sourcing": "^5.6",
+        "prooph/event-store-bus-bridge": "^3.3",
+        "prooph/event-store-http-middleware": "dev-master",
+        "prooph/event-store-symfony-bundle": "^0.5.0",
+        "prooph/pdo-event-store": "^1.9",
+        "prooph/service-bus-symfony-bundle": "^0.7.0",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/orm-pack": "^1.0",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+        "zendframework/zend-validator": "^2.10"
     },
     "require-dev": {
         "overblog/graphiql-bundle": "^0.1.1",
@@ -61,5 +68,6 @@
             "allow-contrib": false,
             "require": "4.1.*"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
