Hook up elastic search on read-model update automatically

--- a/config/graphql/types/Farm.yaml
+++ b/config/graphql/types/Farm.yaml
@@ -4,5 +4,11 @@ Farm:
     description: "A Farm"
     fields:
       id:
-        type: "Int!"
-        description: "The unique ID of the apartment."
+        type: "Uuid!"
+        description: "The unique ID of the farm."
+      name:
+        type: "String!"
+      email:
+        type: "String!"
+      location:
+        type: "GeoPoint"
