--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,7 @@ APP_SECRET=9099674655aebdbaa5be1d9a664f96ca
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+###< symfony/messenger ###
