--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/elastica-bundle": "^5.1@dev",
         "neomerx/json-api": "^2.0",
         "overblog/graphql-bundle": "^0.11.4",
         "prooph/event-sourcing": "^5.6",
@@ -13,10 +14,13 @@
         "prooph/event-store-symfony-bundle": "^0.5.0",
         "prooph/pdo-event-store": "^1.9",
         "prooph/service-bus-symfony-bundle": "^0.7.0",
+        "ramsey/uuid-doctrine": "dev-master",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
+        "symfony/messenger": "*",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer": "*",
         "symfony/yaml": "*",
         "zendframework/zend-validator": "^2.10"
     },
