--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -29,3 +29,9 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+            Writers:
+                is_bundle: false
+                type: annotation
+                dir: '%kernel.project_dir%/src/FarmMarket/Model'
+                prefix: 'App\FarmMarket\Model'
+                alias: Writers
