--- a/config/packages/fos_elastica.yaml
+++ b/config/packages/fos_elastica.yaml
@@ -6,10 +6,10 @@ fos_elastica:
     indexes:
         app:
             types:
-                farm:
+                 farm:
                     persistence:
                         # the driver can be orm, mongodb or phpcr
                         driver: orm
-                        model: App\Entity\Farm
+                        model: App\FarmMarket\Model\Farm\FarmWriteModel
                         provider: ~
                         finder: ~
