--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "friendsofsymfony/elastica-bundle": "^5.1@dev",
-        "jms/serializer-bundle": "^3.0@dev",
+        "friendsofsymfony/elastica-bundle": "^5.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "jms/serializer-bundle": "^2.4",
         "neomerx/json-api": "^2.0",
         "overblog/graphql-bundle": "^0.11.4",
         "prooph/event-sourcing": "^5.6",
         "prooph/event-store-bus-bridge": "^3.3",
-        "prooph/event-store-http-middleware": "dev-master",
         "prooph/event-store-symfony-bundle": "^0.5.0",
         "prooph/pdo-event-store": "^1.9",
         "prooph/service-bus-symfony-bundle": "^0.7.0",
@@ -23,6 +23,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/serializer": "*",
         "symfony/yaml": "*",
+        "vich/uploader-bundle": "^1.8",
         "zendframework/zend-validator": "^2.10"
     },
     "require-dev": {
@@ -74,5 +75,6 @@
             "require": "4.1.*"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
