--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,7 +17,9 @@ doctrine:
 
         url: '%env(resolve:DATABASE_URL)%'
         types:
-            point:  App\Geo\Type\PointType
+            point: App\Geo\Type\PointType
+        mapping_types:
+            point: string
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
