Add oauth library for auth0 authentication

--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
         "ext-iconv": "*",
         "friendsofsymfony/elastica-bundle": "^5.0",
         "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/psr7": "^1.4",
+        "hwi/oauth-bundle": "^0.6.3",
         "jms/serializer-bundle": "^2.4",
         "neomerx/json-api": "^2.0",
         "overblog/graphql-bundle": "^0.11.4",
+        "php-http/curl-client": "^1.7",
+        "php-http/httplug-bundle": "^1.11",
         "prooph/event-sourcing": "^5.6",
         "prooph/event-store-bus-bridge": "^3.3",
         "prooph/event-store-symfony-bundle": "^0.5.0",
