GraphQL / Auth0 link up and basic profile endpoint

--- a/config/graphql/types/Farm.yaml
+++ b/config/graphql/types/Farm.yaml
@@ -12,3 +12,14 @@ Farm:
         type: "String!"
       location:
         type: "GeoPoint"
+
+      sales:
+        type: "[Sale]"
+
+      totalSales:
+        type: "Int"
+      totalCustomers:
+        type: "Int"
+      totalRevenue:
+        type: "String"
+
