--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,14 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "auth0/jwt-auth-bundle": "^3.1",
         "friendsofsymfony/elastica-bundle": "^5.0",
+        "friendsofsymfony/user-bundle": "^2.1",
         "guzzlehttp/guzzle": "^6.3",
         "guzzlehttp/psr7": "^1.4",
         "hwi/oauth-bundle": "^0.6.3",
         "jms/serializer-bundle": "^2.4",
+        "nelmio/cors-bundle": "^1.5",
         "neomerx/json-api": "^2.0",
         "overblog/graphql-bundle": "^0.11.4",
         "php-http/curl-client": "^1.7",
