--- a/config/packages/hwi_oauth.yaml
+++ b/config/packages/hwi_oauth.yaml
@@ -2,6 +2,14 @@ hwi_oauth:
     # list of names of the firewalls in which this bundle is active, this setting MUST be set
     firewall_names: [secured_area]
 
+    connect:
+        account_connector: fos_user_provider
+
+    fosub:
+        username_iterations: 30
+        properties:
+            auth0: auth0Id
+
     # https://github.com/hwi/HWIOAuthBundle/blob/master/Resources/doc/2-configuring_resource_owners.md
     resource_owners:
         auth0:
