--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    locale: 'en'
 
 services:
     # default configuration for services in *this* file
@@ -66,8 +67,12 @@ services:
     App\Elastic\FarmFinder:
         arguments: ['@fos_elastica.finder.app.farm']
 
-    my.oauth_aware.user_provider.service:
-        class: HWI\Bundle\OAuthBundle\Security\Core\User\FOSUBUserProvider
+    fos_user_provider:
+        class: App\Security\FOSUserBundleProvider
         arguments:
           - '@fos_user.user_manager'
-          - ['pass properties as array']
+          - {auth0: auth0Id }
+
+    a0_user_provider:
+        class: App\Security\A0UserProvider
+        arguments: ["@jwt_auth.auth0_service"]
