--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/psr7": "^1.4",
         "hwi/oauth-bundle": "^0.6.3",
         "jms/serializer-bundle": "^2.4",
+        "moneyphp/money": "^3.1",
         "nelmio/cors-bundle": "^1.5",
         "neomerx/json-api": "^2.0",
         "overblog/graphql-bundle": "^0.11.4",
