--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,14 +15,14 @@ security:
             security: false
 
         auth_area:
+            anonymous: false
             stateless: true
             simple_preauth:
                 authenticator: jwt_auth.jwt_authenticator
                 provider: a0
 
         secured_area:
-            anonymous: ~
-
+            anonymous: false
             oauth:
                 resource_owners:
                     auth0: "/auth0/callback"
@@ -39,16 +39,8 @@ security:
                 target: /
 
 
-            # activate different ways to authenticate
-
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
-
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
